--- a/css/style.css
+++ b/css/style.css
@@ -34,10 +34,6 @@ body {
   text-align: center;
 }
 
-.head {
-  display: none;
-}
-
 /* HEADER 
 .head {
   position: absolute;
@@ -62,10 +58,6 @@ body {
 }
 HEADER END */
 
-.main,
-.about {
-  height: 100vh;
-}
 /* MAIN */
 .bear {
   width: 25vmin;
@@ -79,6 +71,7 @@ HEADER END */
   align-items: center;
   display: flex;
   flex-direction: column;
+  min-height: 100vh;
   justify-content: center;
   max-width: 100vw;
 }
@@ -97,25 +90,26 @@ HEADER END */
 /* ABOUT */
 
 .about {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
   margin: 0 auto;
   padding: 3vh 0 0 0;
   text-align: justify;
   width: 90vw;
 }
-
 .about * {
   margin-bottom: 0.4rem;
 }
 
 .about h2 {
-  font-size: 15vmin;
+  font-size: 6.5vmin;
+  text-align: end;
+}
+
+.about .my_name {
+  font-family: open-sans-extrabold;
 }
 
 .about p {
-  font-size: 6vmin;
+  font-size: 5.2vmin;
 }
 
 .myself * {
